--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <span class="text-gray-300">★</span>
 </div>
         <p class="font-bold text-blue-600 mb-3">Rp 33.600</p>
-        <button onclick="addToCart('Lucky Striker Cool Switch', 33600)" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Add to Cart</button>
+        <button onclick="addToCart('Lucky Strike Cool Switch', 33600)" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Add to Cart</button>
       </div>
     </div>
 
@@ -136,7 +136,7 @@
   <span class="text-gray-300">★</span>
 </div>
         <p class="font-bold text-blue-600 mb-3">Rp 33.600</p>
-        <button onclick="addToCart('Lucky Stroke Purple Switch', 33600)" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Add to Cart</button>
+        <button onclick="addToCart('Lucky Strike Purple Switch', 33600)" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">Add to Cart</button>
       </div>
     </div>
     
